# tgar-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  REUSE-DEBT.md  REUSE.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/tgar/: Cargo.toml
crates/tgar-core/: Cargo.toml
crates/tgar-core/src/: agent_handle.rs  agent_stamp.rs  config.rs  goal_events.rs  lib.rs
crates/tgar-telegram/: Cargo.toml
crates/tgar-telegram/src/: bot.rs  http.rs  lib.rs  pagination.rs
crates/tgar-tts/: Cargo.toml
crates/tgar-tts/src/: lib.rs
crates/tgar/src/: main.rs
docs/: COMPAT.md  PORTING.md  RELEASE.md  STRANGLER.md  TELEGRAM.md  TRANSPILE_RESEARCH.md
fixtures/: relay.minimal.toml
scripts/: dual-run-smoke.sh
