[workspace]
resolver = "2"
members = [
    "crates/tgar",
    "crates/tgar-core",
    "crates/tgar-telegram",
    "crates/tgar-tts",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
license = "MIT"
repository = "https://github.com/tzervas/tgar-rs"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tgar-core = { path = "crates/tgar-core" }
tgar-telegram = { path = "crates/tgar-telegram" }
tgar-tts = { path = "crates/tgar-tts" }
toml = "0.8"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
