[package]
name = "tgar-telegram"
description = "Telegram Bot API client for tgar-rs (sendMessage, pagination)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ureq = { workspace = true }

[lints]
workspace = true